# disaster-tweet-detection

./: .gitignore  README.md  pyproject.toml  todo.md
notebooks/: 01-explore-and-clean-text.ipynb  02-basic-naive-bayes.ipynb  03-xgboost.ipynb  04-xgboost-sentence-BERT.ipynb  05-xgboost-sentence-BERT-plus-keywords.ipynb
src/: data.py  preprocessing.py  tuning.py
