[tool.poetry]
name = "disaster-tweet-detection"
version = "0.1.0"
description = "Model that classifies tweets into real disasters or not."
authors = ["neperiana <ikbenmila@gmail.com>"]
readme = "README.md"
packages = [{include = "disaster_tweet_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
nltk = "^3.7"
scikit-learn = "^1.2.0"
xgboost = "^1.7.2"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
kaggle = "^1.5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
